--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="avatar"><img src="images/IMG_2046.jpg" width="80" height="78" alt="" /></span>
 							<h1 id="title">Victor Odunsi</h1>
-							<p>Data Analyst</p>
+							<p>Data Scientist</p>
 						</div>
 
 					<!-- Nav -->
@@ -58,7 +58,7 @@
 
 							<header>
 								<h2 class="alt"> <strong>Hi, I'm <strong>Victor!</strong>
-								<p>A Data Analyst versed in SQL, Tableau, Power BI and Python. I'm a firm believer in using data to solve humanitarian issues.  </p>
+								<p>A Data Scientist versed in Python, SQL, Tableau and Power BI. I'm a firm believer in using data to solve humanitarian issues.  </p>
 							</header>
 
 
@@ -107,13 +107,13 @@
 							I bring a unique blend of analytical rigor and scientific expertise to the table.
 							With a strong foundation in analytical thinking and a keen eye for detail, 
 							I am well-equipped to navigate the complexities of data analysis and interpretation. 
-							Proficient in Data Science tools such as SQL, Python Tableau and Power BI, 
+							Proficient in Data Science tools such as Python, SQL, Tableau and Power BI, 
 							I have only become even more curious about the power of harnessing data.
 							Over the years I have developed an aptitude for problem-solving, a commitment to accuracy,
 							and an appreciation for the impact of meticulous data handling. Beyond technical skills, 
 							I pride myself on my ability to communicate complex ideas effectively.
-							I'm committed to not only generating insights from data but also to articulating those insights in a manner 
-							that informs decision-making, driving positive outcomes and contributing meaningfully to projects that make a tangible impact. </p>
+							I am committed not only to generating insights from data but also to articulating those insights in a manner 
+							that informs decision-making, driving positive outcomes and contributing meaningfully to projects that make tangible impact. </p>
 
 						</div>
 					</section>
