--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="avatar"><img src="images/IMG_2046.jpg" width="80" height="78" alt="" /></span>
 							<h1 id="title">Victor Odunsi</h1>
-							<p>Data Scientist</p>
+							<p>Data Science/ML Engineer</p>
 						</div>
 
 					<!-- Nav -->
@@ -41,8 +41,9 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/victor-%E1%BB%8Ddu%CC%81nsi%CC%80-13a65a1a8/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/victor-odunsi-13a65a1a8/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="mailto:victorodunsi44@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/Victor-Odunsi" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 
 				</div>
@@ -58,7 +59,22 @@
 
 							<header>
 								<h2 class="alt"> <strong>Hi, I'm <strong>Victor!</strong>
-								<p>A Data Scientist versed in Python, SQL, Tableau and Power BI. I'm a firm believer in using data to solve humanitarian issues.  </p>
+								<p>A Data Scientist and Machine Learning Engineer.
+									 I’m passionate about exploring data science, machine learning, and 
+									 AI to solve real-world problems.  </p>
+									 <!-- <p>My Tools</p> -->
+									 <!-- Skills / Tools -->
+										<div class="skills-grid">
+										<div class="skill-box">PYTHON</div>
+										<div class="skill-box">PANDAS</div>
+										<div class="skill-box">NUMPY</div>
+										<div class="skill-box">SCIKIT-LEARN</div>
+										<div class="skill-box">PYTORCH</div>
+										<div class="skill-box">SQLITE</div>
+										<div class="skill-box">POSTGRESQL</div>
+										<div class="skill-box">DOCKER</div>
+										<div class="skill-box">AWS</div>
+										</div>
 							</header>
 
 
@@ -66,32 +82,36 @@
 					</section>
 
 				<!-- Portfolio -->
-					<section id="portfolio" class="two">
-						<div class="container">
+				<section id="portfolio" class="two">
+				<div class="container">
 
-							<header>
-								<h2>Portfolio Projects</h2>
-							</header>
+					<header>
+					<h2>Portfolio Projects</h2>
+					</header>
 
-							<p></p>
+					<div class="portfolio-grid">
+					<article class="portfolio-item">
+						<a href="https://medium.com/@Victor_Odunsi/sql-and-tableau-project-exploratory-data-analysis-on-world-death-data-5e3549f1cafc" class="image fit">
+						<img src="images/Screenshot 2023-09-20 234616.png" alt="SQL & Tableau Project" />
+						</a>
+						<h2>SQL and Tableau Project</h2>
+						<p>Exploratory Data Analysis on World Death Data</p>
+					</article>
 
-							<div class="row">
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="https://medium.com/@Victor_Odunsi/sql-and-tableau-project-exploratory-data-analysis-on-world-death-data-5e3549f1cafc" class="image fit"><img src="images/Screenshot 2023-09-20 234616.png" alt="" /></a>
-										<header>
-											<h3>SQL and Tableau Project: Exploratory Data Analysis on World Death Data.</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="https://github.com/Victor-Odunsi/SQL-data-cleaning/blob/b1c2b471f35b63f7c1d7e78b7126738e4e64e825/Nashville%20Housing%20Data%20cleaning" class="image fit"><img src="images/brandon-griggs-wR11KBaB86U-unsplash.jpg" alt="" /></a>
-										<header>
-											<h3>Data Cleaning in SQL</h3>
-										</header>
-									</article>
+					<article class="portfolio-item">
+						<a href="https://github.com/Victor-Odunsi/SQL-data-cleaning/blob/b1c2b471f35b63f7c1d7e78b7126738e4e64e825/Nashville%20Housing%20Data%20cleaning" class="image fit">
+						<img src="images/brandon-griggs-wR11KBaB86U-unsplash.jpg" alt="SQL Data Cleaning" />
+						</a>
+						<h2>Data Cleaning in SQL</h2>
+						<p>Transforming raw Nashville Housing data into structured form</p>
+					</article>
 
-						</div>
-					</section>
+					<!-- Add more projects here -->
+					</div>
+
+				</div>
+				</section>
+
 
 				<!-- About Me -->
 					<section id="about" class="three">
@@ -103,18 +123,17 @@
 
 							<a href="#" class="image featured"><img src="images/.jpg" alt="" /></a>
 
-							<p>As a seasoned medical laboratory scientist embarking on a dynamic journey into the world of data science, 
-							I bring a unique blend of analytical rigor and scientific expertise to the table.
-							With a strong foundation in analytical thinking and a keen eye for detail, 
-							I am well-equipped to navigate the complexities of data analysis and interpretation. 
-							Proficient in Data Science tools such as Python, SQL, Tableau and Power BI, 
-							I have only become even more curious about the power of harnessing data.
-							Over the years I have developed an aptitude for problem-solving, a commitment to accuracy,
-							and an appreciation for the impact of meticulous data handling. Beyond technical skills, 
-							I pride myself on my ability to communicate complex ideas effectively.
-							I am committed not only to generating insights from data but also to articulating those insights in a manner 
-							that informs decision-making, driving positive outcomes and contributing meaningfully to projects that make tangible impact. </p>
+							<p>I am a data scientist and machine learning engineer with a strong foundation in analytical problem-solving and end-to-end model development. 
+							   My background as a medical laboratory scientist has given me a deep appreciation for precision, rigor, and the real-world impact of data-driven decisions.
 
+							   Today, I specialize in Python, scikit-learn, PyTorch, and LangChain, leveraging these tools to build and deploy machine learning and AI solutions. 
+							   My work spans classical machine learning, deep learning, and LLM-powered applications, with a strong focus on deploying models into production using modern frameworks.
+
+							   A core area of my passion is the application of ML and AI in healthcare. 
+							   Many of my projects explore how data-driven insights and intelligent systems can improve diagnostics, enhance decision-making, and ultimately contribute to better patient outcomes.
+
+							   Beyond technical expertise, I prioritize clarity in communication—translating complex results into actionable insights that drive meaningful impact. 
+							   I am committed to using AI not just as a technological tool, but as a force for solving real humanitarian and healthcare challenges. </p>
 						</div>
 					</section>
 
@@ -126,15 +145,16 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>We can get in touch via LinkedIn or Mail. 
+							<p>We can get in touch via LinkedIn, Mail or Github. 
 			
 							</p>
 							<div class="bottom">
 
 								<!-- Social Icons -->
 									<ul class="icons">
-										<li><a href="https://www.linkedin.com/in/victor-%E1%BB%8Ddu%CC%81nsi%CC%80-13a65a1a8/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+										<li><a href="https://www.linkedin.com/in/victor-odunsi-13a65a1a8/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 										<li><a href="mailto:victorodunsi44@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+										<li><a href="https://github.com/Victor-Odunsi" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
 			
 							</div>
@@ -148,7 +168,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; 2023 Victor Odunsi</li><li></a></li>
+						<li>&copy; 2025 Victor Odunsi</li><li></a></li>
 					</ul>
 
 			</div>
